ex_em_ell/tests/snapshots/simple__example_xmls.snap
---
source: ex_em_ell/tests/simple.rs
expression: round_trip
input_file: ex_em_ell/tests/data/simple/valid_example.xml
---
<?xml version="1.0" encoding="utf-8"?>
<example>
  <field>value</field>
  <child>
    <field>value</field>
  </child>
</example>
