ex_em_ell/tests/snapshots/simple__to_xml.snap
---
source: ex_em_ell/tests/simple.rs
expression: actual
---
<?xml version="1.0" encoding="utf-8"?>
<example>
  <field>value</field>
</example>
